сохранение записей после перезапуска